// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmissionStatus status \`excused\` renders properly 1`] = `
<Text
  accessibilityLabel="Excused,"
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontFamily": "Lato-Regular",
        "fontSize": 16,
      },
      Array [
        Object {
          "fontSize": 14,
          "paddingTop": 2,
        },
        undefined,
        Object {
          "color": "#556572",
        },
      ],
    ]
  }
>
  Excused
</Text>
`;

exports[`SubmissionStatus status \`late\` renders properly 1`] = `
<Text
  accessibilityLabel="Late,"
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontFamily": "Lato-Regular",
        "fontSize": 16,
      },
      Array [
        Object {
          "fontSize": 14,
          "paddingTop": 2,
        },
        undefined,
        Object {
          "color": "#FC5E13",
        },
      ],
    ]
  }
>
  Late
</Text>
`;

exports[`SubmissionStatus status \`missing\` renders properly 1`] = `
<Text
  accessibilityLabel="Missing,"
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontFamily": "Lato-Regular",
        "fontSize": 16,
      },
      Array [
        Object {
          "fontSize": 14,
          "paddingTop": 2,
        },
        undefined,
        Object {
          "color": "#EE0612",
        },
      ],
    ]
  }
>
  Missing
</Text>
`;

exports[`SubmissionStatus status \`none\` renders properly 1`] = `
<Text
  accessibilityLabel="Not Submitted,"
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontFamily": "Lato-Regular",
        "fontSize": 16,
      },
      Array [
        Object {
          "fontSize": 14,
          "paddingTop": 2,
        },
        undefined,
        Object {
          "color": "#556572",
        },
      ],
    ]
  }
>
  Not Submitted
</Text>
`;

exports[`SubmissionStatus status \`submitted\` renders properly 1`] = `
<Text
  accessibilityLabel="Submitted,"
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontFamily": "Lato-Regular",
        "fontSize": 16,
      },
      Array [
        Object {
          "fontSize": 14,
          "paddingTop": 2,
        },
        undefined,
        Object {
          "color": "#127A1B",
        },
      ],
    ]
  }
>
  Submitted
</Text>
`;
